2018-05-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview, ftstring, ftgrid] Change dimension options.

	* src/ftcommon.[hc] (FTDemo_Dispay_New): Use single dimension string as
	an argument, parse it, and initialize accordingly.

	* src/ftgrid.c (usage, parse_cmdline, status): Use single dimension
	string option.
	* src/ftstring.c (usage, parse_cmdline, status): Ditto.
	* src/ftview.c (usage, parse_cmdline, status): Ditto, rename variable
	axis option.

	* src/ftdiff.c, src/ftgamma.c: Updated.

2018-05-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile [unixdev]: Uncouple harfbuzz and libpng.

2018-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblbgra.h: Gamma-corrected variant (disabled).

2018-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblbgra.h: Make it wotk for all destination targets.

2018-05-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Fast "powerless" gamma ramps.

	We calculate the lookup tables for the power function using finite
	differences. This is 10 times faster and accurate enough for gamma
	correction.

	* graph/gblender.c (gblender_set_gamma_table): Reimplement using
	finite differences.
	* src/ftstring.c (event_gamma_change): Ditto for the decoration ramp.

2018-05-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (bitmap_scale): Mark centers of mono pixels.

2018-05-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfill.c (grFillRect): Thinko.

2018-05-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Update FT_DEBUG_AUTOFIT mode.

	* src/ftgrid.c (grid_status_draw_outline) [FT_DEBUG_AUTOFIT]:
	Show active segments only when autohinter is forced. Minor tweaks.

2018-05-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Accept bitmap fonts.

	* src/ftgrid.c (main): Accept bitmap fonts.
	(grid_status_draw_outline): Do bitmap for any font.
	(grid_status_rescale_initial): Bitmap-compatible improved layout.
